--- a/zuul6002/src/main/resources/application.yml
+++ b/zuul6002/src/main/resources/application.yml
@@ -1,20 +1,22 @@
 server:
-  port: 6000
-
+  port: 6002
 eureka:
   client:
     serviceUrl:
-        defaultZone: http://localhost:3000/eureka
+        defaultZone: http://localhost:3000/eureka/  #eureka服务端提供的注册地址 参考服务端配置的这个路径
   instance:
-    instance-id: zuul-6000 #此实例注册到eureka服务端的唯一的实例ID
-    #instance-id: ${spring.cloud.client.ip-address}/LQuan
+    instance-id: zuul-server-6002 #此实例注册到eureka服务端的唯一的实例ID
     prefer-ip-address: true #是否显示IP地址
     leaseRenewalIntervalInSeconds: 10 #eureka客户需要多长时间发送心跳给eureka服务器，表明它仍然活着,默认为30 秒 (与下面配置的单位都是秒)
     leaseExpirationDurationInSeconds: 30 #Eureka服务器在接收到实例的最后一次发出的心跳后，需要等待多久才可以将此实例删除，默认为90秒
 
 spring:
   application:
-    name: GateWay-Zuul  #此实例注册到eureka服务端的name
+    name: zuul-server2 #此实例注册到eureka服务端的name
 
-
-
+#zuul:
+#  ignored-services: "*"
+#  routes:
+#    power:
+#      serviceId: server-power
+#      path: /power/**
