--- a/springbootRibbitmqSend/pom.xml
+++ b/springbootRibbitmqSend/pom.xml
@@ -9,7 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springbootRibbitmqServer</artifactId>
+    <artifactId>springbootRibbitmqSend</artifactId>
+
 
     <dependencies>
         <dependency>
@@ -22,13 +23,22 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
-
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.55</version>
-
         </dependency>
-
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
