--- a/springbootRibbitmqSend/pom.xml
+++ b/springbootRibbitmqSend/pom.xml
@@ -28,6 +28,13 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.55</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
