--- a/eureka3001/src/main/resources/application.yml
+++ b/eureka3001/src/main/resources/application.yml
@@ -1,19 +1,23 @@
 server:
-  port: 3000
+  port: 3001
+  servlet:
+    context-path: /
 spring:
   application:
-    name: eureka3000-Name
-
+    name: eureka300x-Name
 
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: localhost3001
+    prefer-ip-address: false
   client:
     register-with-eureka: false #不把自己作为一个客户端注册到自己身上
-    fetch-registry: false #不需要从服务端获取注册信息（因为在这里自己就是服务端，而且已经禁用自己注册了）
+    fetch-registry: false #需要从服务端获取注册信息（因为在这里自己就是服务端，而且已经禁用自己注册了）
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}/${server.port}/eureka
+      defaultZone: http://localhost3002:3002/eureka,http://localhost3003:3003/eureka
+      #defaultZone: http://localhost3002:3002,http://localhost3003:3003
+
   server:
     enable-self-preservation: false #关闭自我保护机制
     eviction-interval-timer-in-ms: 4000 #设置清理间隔
