--- a/eureka3000/src/main/resources/application.yml
+++ b/eureka3000/src/main/resources/application.yml
@@ -13,7 +13,8 @@ eureka:
     register-with-eureka: false #不把自己作为一个客户端注册到自己身上
     fetch-registry: false #不需要从服务端获取注册信息（因为在这里自己就是服务端，而且已经禁用自己注册了）
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}/${server.port}/eureka
+       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
+      #defaultZone: http://${eureka.instance.hostname}:${server.port}
   server:
     enable-self-preservation: false #关闭自我保护机制
     eviction-interval-timer-in-ms: 4000 #设置清理间隔
